--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,10 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 # Optional: WhatsApp for "Send to Shop" on order success. Used if branch has no whatsapp_phone/phone (number with country code, no +)
 NEXT_PUBLIC_WHATSAPP_NUMBER=94704462999
 
-# Gmail: App Password for sending contact form and order emails to shop (config/site.ts contact.email).
-# Create at https://myaccount.google.com/apppasswords (2FA must be on).
-# GMAIL_APP_PASSWORD=ltsq ymxw ujjv xiyk
-GMAIL_APP_PASSWORD=your-16-char-app-password
+# Gmail: App Password for sending contact form emails to shop (config/site.ts contact.email).
+# Do NOT use your normal Gmail password — it will fail with "Username and Password not accepted".
+# 1. Turn on 2-Step Verification: https://myaccount.google.com/signinoptions/two-step-verification
+# 2. Create an App Password: https://myaccount.google.com/apppasswords (e.g. "Mail" for this app)
+# 3. Put the 16-character password here (spaces optional). Example:
+# GMAIL_APP_PASSWORD=abcd efgh ijkl mnop
+GMAIL_APP_PASSWORD=
