--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts",
+    "reseed-products": "tsx scripts/reseed-products.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
